--- a/javascriptcanvas.html
+++ b/javascriptcanvas.html
@@ -44,6 +44,8 @@
   var radius = 20;
   var color = "red";
   var colorPicker = document.querySelector('.color-picker');
+  canvas.width = window.innerWidth * 0.8;
+  canvas.height = window.innerHeight * 0.8;
 
 // ------------------------------------------
 // define draw function
@@ -117,11 +119,11 @@
 // ------------------------------------------
 // adjusting size of canvas
 
-  window.addEventListener('resize', function (e){
-    canvas.width = window.innerWidth * 0.8;
-    canvas.height = window.innerHeight * 0.8;
-    draw()
-  })
+  // window.addEventListener('resize', function (e){
+  //   canvas.width = window.innerWidth * 0.8;
+  //   canvas.height = window.innerHeight * 0.8;
+  //   draw()
+  // })
 
 
 </script>
