--- a/javascriptcanvas.html
+++ b/javascriptcanvas.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Canvas Example</title>
+	<title>Canvas Assignment</title>
 	<input type="color" class="color-picker">
 	<style type="text/css">
 		canvas{
