--- a/javascriptcanvas.html
+++ b/javascriptcanvas.html
@@ -114,7 +114,7 @@
   window.addEventListener('orientationchange', function (e){
     ctx.clearRect(0, 0, canvas.width, canvas.height)
     canvas.width = window.innerWidth * 0.8;
-    // canvas.height = window.innerHeight * 0.8;
+    canvas.height = window.innerHeight * 0.8; 
     draw()
   })
 
