--- a/javascriptcanvas.html
+++ b/javascriptcanvas.html
@@ -109,17 +109,17 @@
   })
 
 // ------------------------------------------
-// clear canvas on mobile with orientation
+// clear canvas on mobile with orientation & change
 
   window.addEventListener('orientationchange', function (e){
     ctx.clearRect(0, 0, canvas.width, canvas.height);
-    canvas.width = window.innerWidth * 0.8;
-    canvas.height = window.innerHeight * 0.8;
+    // canvas.width = window.innerWidth * 0.8;
+    // canvas.height = window.innerHeight * 0.8;
     draw()
   })
 
 // ------------------------------------------
-// adjusting size of canvas
+// adjusting size of canvas - responsive
 
   window.addEventListener('resize', function (e){
     canvas.width = window.innerWidth * 0.8;
