--- a/javascriptcanvas.html
+++ b/javascriptcanvas.html
@@ -109,12 +109,10 @@
   })
 
 // ------------------------------------------
-// clear canvas on mobile with orientation & change
+// clear canvas on mobile with orientation 
 
   window.addEventListener('orientationchange', function (e){
     ctx.clearRect(0, 0, canvas.width, canvas.height);
-    // canvas.width = window.innerWidth * 0.8;
-    // canvas.height = window.innerHeight * 0.8;
     draw()
   })
 
