--- a/javascriptcanvas.html
+++ b/javascriptcanvas.html
@@ -94,6 +94,12 @@
   } else if (e.keyCode == 89) {
     // color = "yellow"
     color = "#fcf18d"
+  } else if (e.keyCode == 80){
+    color = "#f2a7e8"
+    // color = "pink"
+  } else if (e.keyCode == 79){
+    color = "#ffad66"
+    // color = "orange"
   } else if (e.keyCode == 32) {
     ctx.clearRect(0, 0, canvas.width, canvas.height)
   } else if (e.keyCode == 38) {
