--- a/javascriptcanvas.html
+++ b/javascriptcanvas.html
@@ -123,17 +123,19 @@
 
   window.addEventListener('orientationchange', function (e){
     ctx.clearRect(0, 0, canvas.width, canvas.height);
-    draw()
-  })
-
-// ------------------------------------------
-// adjusting size of canvas - responsive (will clear canvas since size is adjusted)
-
-  window.addEventListener('resize', function (e){
     canvas.width = window.innerWidth * 0.8;
     canvas.height = window.innerHeight * 0.8;
     draw()
   })
+
+// ------------------------------------------
+// adjusting size of canvas - responsive (will clear canvas since size is adjusted - load vs. resize)
+
+  // window.addEventListener('load', function (e){
+  //   canvas.width = window.innerWidth * 0.8;
+  //   canvas.height = window.innerHeight * 0.8;
+  //   draw()
+  // })
 
 
 </script>
