--- a/javascriptcanvas.html
+++ b/javascriptcanvas.html
@@ -124,7 +124,7 @@
   window.addEventListener('orientationchange', function (e){
     canvas.width = window.innerWidth * 0.8;
     canvas.height = window.innerHeight * 0.8;
-    ctx.clearRect(0, 0, canvas.width, canvas.height);
+    ctx.clearRect(0, 0);
     draw()
   })
 
