--- a/javascriptcanvas.html
+++ b/javascriptcanvas.html
@@ -4,7 +4,7 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Canvas Assignment</title>
-	<input type="color" class="color-picker">
+	<input type="color" value = "#ff443a" class="color-picker">
 	<style type="text/css">
 		canvas{
 			border: 1px solid black;
