--- a/javascriptcanvas.html
+++ b/javascriptcanvas.html
@@ -63,8 +63,8 @@
   window.addEventListener('mousemove', function (e) {
     // console.log(e.pageX);
     // console.log(e.pageY);
-    x = e.pageX;
-    y = e.pageY;
+    x = e.offsetX;
+    y = e.offsetY;
     draw()
   })
 
