--- a/javascriptcanvas.html
+++ b/javascriptcanvas.html
@@ -72,8 +72,8 @@
 // move circle based on touch for phones/tablets
 
   window.addEventListener('touchmove', function (e) {
-    x = e.clientX;
-    y = e.clientY;
+    x = e.pageX;
+    y = e.pageY;
     draw()
   })
 
